# House_Prices_Dataset_-coursework-

./: CW1_Gachoka_Ronald_S2274825.ipynb  Housing_1.txt  Housing_2.txt  Housing_Data_Dictionary.txt  README.md  index.ipynb  index.updated.ipynb  index_updated.ipynb  pyproject.toml
data/: Housing_1.txt  Housing_2.txt
